--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         nav_version = "2.4.2"
         room_version = '2.4.2'
         hilt_version = '2.44'
+        truth_version = '1.1.3'
     }
 
 
